--- a/css/main.css
+++ b/css/main.css
@@ -594,11 +594,35 @@ header .socials a img {
   background: linear-gradient(0deg, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0) 70%);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   cursor: pointer;
   position: relative;
   -webkit-transition: all 0.6s;
   transition: all 0.6s;
   border-style: none;
+}
+.card.disabled {
+  background: #E1E1E1;
+  color: #AEAEAE;
+  pointer-events: none;
+}
+.card.disabled .img-voto-active {
+  display: none;
+}
+.card a {
+  text-decoration: none;
+  background: none;
+  border-style: none;
+}
+.card a:hover {
+  text-decoration: none;
+  background: none;
+}
+.card a:focus {
+  background: none;
+}
+.card a:active {
+  background: none !important;
 }
 .card .img-voto-active {
   position: relative;
@@ -833,4 +857,15 @@ header .socials a img {
 }
 #candidatoUnit .d-grid li {
   list-style: none;
+}
+
+.modalRegistro {
+  z-index: 999999 !important;
+}
+.modalRegistro a {
+  text-decoration: none;
+  background: none;
+}
+.modalRegistro a:hover {
+  background: none;
 }
